--- a/package.json
+++ b/package.json
@@ -1,22 +1,31 @@
 {
   "name": "sonolus-performance-test-engine",
+  "version": "0.1.0",
+  "description": "A performance test engine in Sonolus",
+  "author": "NonSpicyBurrito",
+  "repository": "github:NonSpicyBurrito/sonolus-performance-test-engine",
+  "license": "MIT",
+  "keywords": [
+    "Sonolus"
+  ],
   "scripts": {
-    "lint": "eslint --ext .ts src/",
-    "serve": "nodemon",
-    "build": "ts-node ./src/build.ts parallel && ts-node ./src/build.ts sequential"
+    "lint": "tsc -p . --noEmit && eslint --ext .ts src/",
+    "serve": "ts-node-dev --respawn --transpile-only ./src/serve",
+    "build": "ts-node ./src/build sequential && ts-node ./src/build parallel"
   },
   "devDependencies": {
-    "@types/fs-extra": "^9.0.12",
-    "@typescript-eslint/eslint-plugin": "^4.28.5",
-    "@typescript-eslint/parser": "^4.28.5",
-    "eslint": "^7.31.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^3.4.0",
-    "fs-extra": "^10.0.0",
-    "nodemon": "^2.0.12",
-    "prettier": "^2.3.2",
-    "sonolus.js": "^3.0.0",
-    "ts-node": "^10.1.0",
-    "typescript": "^4.3.5"
+    "@types/fs-extra": "^9.0.13",
+    "@typescript-eslint/eslint-plugin": "^5.36.1",
+    "@typescript-eslint/parser": "^5.36.1",
+    "eslint": "^8.23.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "fs-extra": "^10.1.0",
+    "prettier": "^2.7.1",
+    "sonolus-core": "^2.0.0",
+    "sonolus.js": "^5.2.3",
+    "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.8.2"
   }
 }
