--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   "scripts": {
     "dev:play-parallel": "sonolus-cli --dev ./play/sonolus-cli.config.parallel.js",
     "dev:play-sequential": "sonolus-cli --dev ./play/sonolus-cli.config.sequential.js",
-    "dev:tutorial": "sonolus-cli --dev ./tutorial/sonolus-cli.config.js",
+    "dev:tutorial": "sonolus-cli --dev ./tutorial",
     "prebuild": "tsc -p ./shared --noEmit && tsc -p ./play --noEmit && tsc -p ./tutorial --noEmit && eslint --ext .ts ./shared && eslint --ext .ts ./play && eslint --ext .ts ./tutorial",
-    "build": "sonolus-cli --build ./play/sonolus-cli.config.parallel.js && sonolus-cli --build ./play/sonolus-cli.config.sequential.js && sonolus-cli --build ./tutorial/sonolus-cli.config.js"
+    "build": "sonolus-cli --build ./play/sonolus-cli.config.parallel.js && sonolus-cli --build ./play/sonolus-cli.config.sequential.js && sonolus-cli --build ./tutorial"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.7.2",
