--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev:play-parallel": "sonolus-cli --dev ./play/sonolus-cli.config.parallel.js",
     "dev:play-sequential": "sonolus-cli --dev ./play/sonolus-cli.config.sequential.js",
     "dev:tutorial": "sonolus-cli --dev ./tutorial",
-    "prebuild": "tsc -p ./shared --noEmit && tsc -p ./play --noEmit && tsc -p ./tutorial --noEmit && eslint --ext .ts ./shared && eslint --ext .ts ./play && eslint --ext .ts ./tutorial",
+    "prebuild": "tsc -p ./shared --noEmit && tsc -p ./play --noEmit && tsc -p ./tutorial --noEmit && eslint --ext .ts ./shared && eslint --ext .ts ./play && eslint --ext .ts ./tutorial && prettier . --check",
     "build": "sonolus-cli --build ./play/sonolus-cli.config.parallel.js && sonolus-cli --build ./play/sonolus-cli.config.sequential.js && sonolus-cli --build ./tutorial"
   },
   "devDependencies": {
@@ -16,7 +16,6 @@
     "@typescript-eslint/parser": "^6.7.2",
     "eslint": "^8.49.0",
     "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.0",
     "prettier": "^3.0.3",
     "prettier-plugin-organize-imports": "^3.2.3",
     "sonolus-core": "~7.3.0",
