--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev:play-parallel": "sonolus-cli --dev ./play/sonolus-cli.config.parallel.js",
     "dev:play-sequential": "sonolus-cli --dev ./play/sonolus-cli.config.sequential.js",
     "dev:tutorial": "sonolus-cli --dev ./tutorial",
-    "prebuild": "tsc -p ./shared --noEmit && tsc -p ./play --noEmit && tsc -p ./tutorial --noEmit && eslint --ext .ts ./shared && eslint --ext .ts ./play && eslint --ext .ts ./tutorial && prettier . --check",
+    "prebuild": "tsc -p ./shared --noEmit && tsc -p ./play --noEmit && tsc -p ./tutorial --noEmit && eslint . && prettier . --check",
     "build": "sonolus-cli --build ./play/sonolus-cli.config.parallel.js && sonolus-cli --build ./play/sonolus-cli.config.sequential.js && sonolus-cli --build ./tutorial"
   },
   "devDependencies": {
