--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
   "scripts": {
     "dev:play-parallel": "sonolus-cli --dev ./play/sonolus-cli.config.parallel.js",
     "dev:play-sequential": "sonolus-cli --dev ./play/sonolus-cli.config.sequential.js",
+    "dev:preview": "sonolus-cli --dev ./preview",
     "dev:tutorial": "sonolus-cli --dev ./tutorial",
-    "prebuild": "tsc -p ./shared --noEmit && tsc -p ./play --noEmit && tsc -p ./tutorial --noEmit && eslint . && prettier . --check",
-    "build": "sonolus-cli --build ./play/sonolus-cli.config.parallel.js && sonolus-cli --build ./play/sonolus-cli.config.sequential.js && sonolus-cli --build ./tutorial"
+    "prebuild": "tsc -p ./shared --noEmit && tsc -p ./play --noEmit && tsc -p ./preview --noEmit && tsc -p ./tutorial --noEmit && eslint . && prettier . --check",
+    "build": "sonolus-cli --build ./play/sonolus-cli.config.parallel.js && sonolus-cli --build ./play/sonolus-cli.config.sequential.js && sonolus-cli --build ./preview && sonolus-cli --build ./tutorial"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.7.2",
