--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
   },
   "devDependencies": {
     "@eslint/js": "^8.57.0",
+    "@sonolus/core": "~7.5.1",
+    "@sonolus/sonolus.js": "~9.4.1",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "prettier": "^3.2.5",
     "prettier-plugin-organize-imports": "^3.2.4",
-    "sonolus-core": "~7.4.0",
-    "sonolus.js": "~9.3.0",
     "typescript": "~5.4.5",
     "typescript-eslint": "^7.6.0"
   }
